public/stylesheets/global.css
/* ... */
div.register-button {
  margin-top: 1em;
  margin-left: -1.5em;
}

.button-link a {
  display: block;
  padding: .25em;
  text-decoration: none;
  text-align: center;
  color: white;
  font-size: .75em;
  font-weight: normal;
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
}

.delete-link a {
  display: block;
  padding: .25em;
  text-decoration: none;
  color: #501214;
  font-size: .75em;
  font-weight: normal;
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
}

div#container {
  min-width: 920px;
  background-color: #FFF;
  margin-top: 60px;
  margin-left: 20px;
  margin-right: 40px;
  margin-bottom: 20px;
  padding: 20px 0px;
  min-height: 700px;
}

div.left-column {
  float: left;
  margin-top: 20px;
  width: 200px;
  
}

div#right-column {
  background-color: #FFF;
  margin-top: 20px;
  margin-left: 240px;
  margin-right: 40px;
  margin-bottom: 20px;
  min-height: 600px;
}

div.navigation {
  -moz-border-radius-bottomright: 15px;
  -webkit-border-bottom-right-radius: 15px;
  border-bottom-right-radius: 15px;
  -moz-border-radius-topright: 15px;
  -webkit-border-top-right-radius: 15px;
  border-top-right-radius: 15px;
  background-color: #F6F6F6;
  border: 2px solid #836C31;
  line-height: 2em;
  margin-left: -30px;
  width: 200px;
  padding: 0.5em 0.5em 0.5em 2.5em;
  opacity: 0.8;
  color: #4b4b4b;
}

div.navigation p {
  border-bottom: #4b4b4b dotted 1px;
  font-size: 1em;}

div.navigation a:link {
  color: #6C5828;
  text-decoration:none;}
  
div.navigation a:hover {
  color: #6C5828;
  text-decoration:underline;}

div.navigation a:visited {
  color: #4b4b4b;
  text-decoration:none;}
  
div.navigation a:active {
  color: #4b4b4b;
  text-decoration:none;}

.logout-link {
  font-size: 70%;
}

div.sidebar {
  line-height: 2em;
  padding: 0em 0em 0em 0.5em;
  width: 216px;
  margin-top: 20px;
  margin-left: 0px;  
  margin-right: 0px;
}

div.admin-tools {
  background-color: #F6F6F6;
  border: 2px solid #4b4b4b;
  line-height: 2em;
  padding: 0.5em 0.5em 1.0em 0.5em;
  width: 180px;
  margin-top: 20px;
  margin-left: 10px;
  opacity: 0.8;
  color: #4b4b4b;
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
  font-weight: bold;
  font-size: 1.1em;
}

div.admin-tools h1 {
  color: #501214;
  border-bottom: #501214 dotted 1px;
}

div.admin-tools div {
  border-bottom: #501214 dotted 1px;
}

div.admin-tools h3 {
  line-height: 1em;
  margin-top: 0.5em;
}

div.admin-tools p {
  border-bottom: #501214 dotted 1px;
  }

div.admin-tools a:link {
  color: #6C5828;
  text-decoration:none;}
  
div.admin-tools a:hover {
  color: #6C5828;
  text-decoration:underline;}

div.admin-tools a:visited {
  color: #4b4b4b;
  text-decoration:none;}
  
div.admin-tools a:active {
  color: #4b4b4b;
  text-decoration:none;}

div#contents {
  margin-top: 0px;  
  margin-left: 20px;
  margin-right: 40px;
}

div#contents h1 {
  margin-top: 0px;
  font-size: 1.5em;
  font-weight: normal;
  color: #501214;
  border-bottom-width: 2px;
  /*border-bottom-style: dotted;*/
  border-bottom-color: #501214;
}

div#topic-details h2, div#session-details h2 {
  padding-bottom: 2px;
  font-size: 1em;
  font-weight: bold;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #501214;
}
  
div#topic-details {
  margin: 2em 0;
}

div#session-details {
  margin-top: 1em;
}

ul#topic-list, ul#department-list {
  margin-left: 0px;
  padding-left: 0px;
  list-style-type: none;
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
  font-size: .875em;
}

ul#topic-list li, ul#department-list li  {
  display: block;
  text-decoration: none;
  border-bottom-width: 1px;
  border-bottom-style: dotted;
  border-bottom-color: #836c31;
  padding: 0.25em 0;
}

ul#topic-list li a:link, ul#department-list li a:link  {
  display: block;
  text-decoration: none;
  color: #836c31;
  
}

ul#topic-list li a:hover, ul#department-list li a:hover {
  display: block;
  text-decoration: underline;
}

ul#topic-list li a:visited, ul#department-list li a:visited{
  display: block;
  text-decoration: none;
  color: #4b4b4b; 
}

ul#topic-list li a:active, ul#department-list li a:active {
  display: block;
  text-decoration: none;
  color: #836c31; 
}

ul#topic-list li span.session-info {
  font-size: 80%;
}


ul#session-list {
  margin-left: 0px;
  padding-left: 0px;
  list-style-type: none;
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
  font-size: .875em;
}

ul#session-list li {
  text-decoration: none;
  border-bottom-width: 1px;
  border-bottom-style: dotted;
  border-bottom-color: #836c31;
    padding-left: 1.5em;

}

ul#session-list li a:link {
  color: #836c31;
}

ul#session-list li a:hover, ul.reservation-list a:hover {
  
  text-decoration: underline;
}

ul.attendance-list li {
}

ul#session-list li a:visited, ul.reservation-list li {

  color: #4b4b4b;
}

ul#session-list li a:active {
  color: #836c31;
  text-decoration: none;
}

ul#past-session-list {
  margin-left: 0px;
  padding-left: 0px;
  list-style-type: none;
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
  font-size: .875em;
  }

ul#past-session-list li {
  text-decoration: none;
  border-bottom-width: 1px;
  border-bottom-style: dotted;
  border-bottom-color: #836c31;
  padding-left: 1.5em;
}

ul.reservation-list {
  margin-left: 0px;
  padding-left: 0px;
  list-style-type: none;
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
  font-size: 1em;
}

ul.reservation-list li {
  text-decoration: none;
  border-bottom-width: 1px;
  border-bottom-style: dotted;
  border-bottom-color: #836c31;
    padding-left: 1.5em;
}

div.reservation-name {
  font-size: 1.3em;
  margin-bottom:.5em;
}

div.reservation-group {
  margin-top: 1em;
}

div.download-link {
  background-repeat: no-repeat;
  background-position: 0px 50%;
  margin-bottom: .5em;
  margin-left: 3px;
}
/* ... */

